Fix breadcrumb spacing

--- a/assets/css/_components.css
+++ b/assets/css/_components.css
@@ -211,5 +211,5 @@
 }
 
 .arrow {
-  margin: 0 0.2rem;
+  margin: 0 0.5rem;
 }
